fixze body width on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,7 @@
 html,
 body {
     height: 100%;
-    background-color: #333366;
-    width: 590px;
+    background-color: #333366;    
     margin-right: auto;
     margin-left: auto;
 }
@@ -30,7 +29,10 @@ header {
 @media screen and (min-width: 1024px) {
     .navbar {
         background-color: unset !important;
-    }    
+    } 
+    body {
+        width: 590px;
+    }   
 }
 
 @media screen and (max-width: 1023px) {
